--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <meta name="format-detection" content="telephone=no"/>
 <meta name="google-site-verification" content="mIYQdChQSvYFT073C8Kk0hZIifpGczJ2v-ofE6QAMV0"/>
 <title>קבוצת מילטין I עמוד הבית</title>
-<link  rel="stylesheet" type="text/css"  media="all" href="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/mage/calendar.css" />
-<link  rel="stylesheet" type="text/css"  media="all" href="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/Mageplaza_Blog/css/mpBlogIcon.css" />
+<link  rel="stylesheet" type="text/css"  media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/css/calender.css" />
+<link  rel="stylesheet" type="text/css"  media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/css/mpBlogIcon.css" />
 <link  rel="stylesheet" type="text/css"  media="all" href="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/css/styles-m.css" />
 <link  rel="stylesheet" type="text/css"  media="all" href="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/Orbitvu_SelfHosted/css/orbitvu-sh-public.css" />
 <link  rel="stylesheet" type="text/css"  media="all" href="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/css/owl.carousel.min.css" />
