--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     href="https://milatin-group.co.il/"
     title=""
     aria-label="store logo">
-    <img src="https://milatin-group.co.il/media/logo/stores/1/Logo_-Logo.png"
+    <img src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c51f.png"
          title=""
          alt=""
             width="170"                />
