--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     var require = {
         'baseUrl': 'https\u003A\u002F\u002Fmilatin\u002Dgroup.co.il\u002Fstatic\u002Fversion1677434242\u002Ffrontend\u002FWorx\u002FLumaRtl\u002Fhe_IL'
     };</script>        <meta charset="utf-8"/>
-<meta name="title" content="קבוצת מילטין I עמוד הבית"/>
+<meta name="title" content="שירן שושנה | טיפים להורות"/>
 <meta name="robots" content="INDEX,FOLLOW"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <meta name="format-detection" content="telephone=no"/>
 <meta name="google-site-verification" content="mIYQdChQSvYFT073C8Kk0hZIifpGczJ2v-ofE6QAMV0"/>
-<title>קבוצת מילטין I עמוד הבית</title>
+<title>שירן שושנה | טיפים להורות</title>
 <link  rel="stylesheet" type="text/css"  media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/css/calender.css" />
 <link  rel="stylesheet" type="text/css"  media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/css/mpBlogIcon.css" />
 <link  rel="stylesheet" type="text/css"  media="all" href="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/css/styles-m.css" />
@@ -38,23 +38,7 @@
 <link  rel="shortcut icon" type="image/x-icon" href="https://milatin-group.co.il/media/favicon/stores/1/facicon-5.png" />
 <!-- Google Tag Manager -->
 
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-
-})(window,document,'script','dataLayer','GTM-MJXXCXF');</script>
-
-<!-- End Google Tag Manager -->            <script type="text/x-magento-init">
-        {
-            "*": {
-                "Magento_PageCache/js/form-key-provider": {}
-            }
-        }
-    </script>
     </head>
     <body data-container="body"
           data-mage-init='{"loaderAjax": {}, "loader": { "icon": "https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/images/loader-2.gif"}}'
@@ -1524,48 +1508,8 @@ for (var i = 0; i < prodImageContainersWrappers.length; i++) {
             }
         }
 </script>
-<!-- Accessibility - milatin-group.co.il -->
-
-<script> 
-window.interdeal = {
-	sitekey   : "d0a8021acf56e20f564f2361abe8cc40",
-	Position  : "Right",
-	Menulang  : "HE",
-	domains	 : {
-	  js  : "https://js.nagich.co.il/",
-	  acc : "https://access.nagich.co.il/"
-	},
-	btnStyle  : {
-			color : {
-			    main   : "#122231",
-			    second : "#fff"
-			},
-			vPosition : ["80%","15%"], //Y-axis position of the widget, left side is reffering to the desktop version, the right side is for mobile.
-			scale	  : ["0.6","0.5"], //Size of the widget, the left side is referring to the desktop version, the right side is for mobile.
-			icon	  : { 
-				type	: 10, //You can choose between 1- 14 icons, or set value as string like "Accessibility".
-				shape	: "circle", //You can choose the following shapes: "circle", "rectangle", "rounded", "semicircle".
-				outline	: true //true / false.
-			}
-		}
-};
-(function(doc, head, body){
-	var coreCall             = doc.createElement('script');
-	coreCall.src             = 'https://js.nagich.co.il/core/4.4.0/accessibility.js';
-	coreCall.defer           = true;
-	coreCall.integrity       = 'sha512-3lGJBcuai1J0rGJHJj4e4lYOzm7K08oEHsg1Llt7x24OOsa/Ca0wwbSi9HhWUn92FKN3fylaq9xmIKVZnUsT3Q==';
-	coreCall.crossOrigin     = 'anonymous';
-	coreCall.setAttribute('data-cfasync', true );
-	body? body.appendChild(coreCall) : head.appendChild(coreCall);
-})(document, document.head, document.body);
-</script>
 
 
-<!-- Google Tag Manager (noscript) -->
-
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MJXXCXF"
-
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <!-- End Google Tag Manager (noscript) --></div>    </body>
 </html>
