--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <title>שירן שושנה | טיפים להורות</title>
 <link  rel="stylesheet" type="text/css"  media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/css/calender.css" />
 <link  rel="stylesheet" type="text/css"  media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/css/mpBlogIcon.css" />
-<link  rel="stylesheet" type="text/css"  media="all" href="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/css/styles-m.css" />
-<link  rel="stylesheet" type="text/css"  media="all" href="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/Orbitvu_SelfHosted/css/orbitvu-sh-public.css" />
-<link  rel="stylesheet" type="text/css"  media="all" href="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/css/owl.carousel.min.css" />
-<link  rel="stylesheet" type="text/css"  media="all" href="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/css/temp1.css" />
+<link  rel="stylesheet" type="text/css"  media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/css/styles-m.css" />
+<link  rel="stylesheet" type="text/css"  media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/css/orbitvu-sh-public.css" />
+<link  rel="stylesheet" type="text/css"  media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/css/owl.carousel.min.css" />
+<link  rel="stylesheet" type="text/css"  media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/css/temp1.css" />
 <link  rel="stylesheet" type="text/css"  media="all" href="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/Worx_Banner/css/swiper.min.css" />
 <link  rel="stylesheet" type="text/css"  media="screen and (min-width: 768px)" href="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/css/styles-l.css" />
 <link  rel="stylesheet" type="text/css"  media="print" href="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/css/print.css" />
