--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <link  rel="stylesheet" type="text/css"  media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/css/orbitvu-sh-public.css" />
 <link  rel="stylesheet" type="text/css"  media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/css/owl.carousel.min.css" />
 <link  rel="stylesheet" type="text/css"  media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/css/temp1.css" />
-<link  rel="stylesheet" type="text/css"  media="all" href="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/Worx_Banner/css/swiper.min.css" />
+<link  rel="stylesheet" type="text/css"  media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/css/swiper.min.css" />
 <link  rel="stylesheet" type="text/css"  media="screen and (min-width: 768px)" href="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/css/styles-l.css" />
 <link  rel="stylesheet" type="text/css"  media="print" href="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/css/print.css" />
 <script  type="text/javascript"  src="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/requirejs/require.js"></script>
