--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 <!doctype html>
 <html lang="he">
     <head >
-        <script>
-    var BASE_URL = 'https\u003A\u002F\u002Fmilatin\u002Dgroup.co.il\u002F';
-    var require = {
-        'baseUrl': 'https\u003A\u002F\u002Fmilatin\u002Dgroup.co.il\u002Fstatic\u002Fversion1677434242\u002Ffrontend\u002FWorx\u002FLumaRtl\u002Fhe_IL'
-    };</script>        <meta charset="utf-8"/>
+            <meta charset="utf-8"/>
 <meta name="title" content="שירן שושנה | טיפים להורות"/>
 <meta name="robots" content="INDEX,FOLLOW"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
