--- a/index.html
+++ b/index.html
@@ -2,22 +2,26 @@
 <!doctype html>
 <html lang="he">
     <head >
-            <meta charset="utf-8"/>
+        <script>
+    var BASE_URL = 'https\u003A\u002F\u002Fmilatin\u002Dgroup.co.il\u002F';
+    var require = {
+        'baseUrl': 'https\u003A\u002F\u002Fmilatin\u002Dgroup.co.il\u002Fstatic\u002Fversion1677434242\u002Ffrontend\u002FWorx\u002FLumaRtl\u002Fhe_IL'
+    };</script>        <meta charset="utf-8"/>
 <meta name="title" content="שירן שושנה | טיפים להורות"/>
 <meta name="robots" content="INDEX,FOLLOW"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <meta name="format-detection" content="telephone=no"/>
 <meta name="google-site-verification" content="mIYQdChQSvYFT073C8Kk0hZIifpGczJ2v-ofE6QAMV0"/>
 <title>שירן שושנה | טיפים להורות</title>
-<link  rel="stylesheet" type="text/css"  media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/css/calender.css" />
-<link  rel="stylesheet" type="text/css"  media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/css/mpBlogIcon.css" />
-<link  rel="stylesheet" type="text/css"  media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/css/styles-m.css" />
-<link  rel="stylesheet" type="text/css"  media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/css/orbitvu-sh-public.css" />
-<link  rel="stylesheet" type="text/css"  media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/css/owl.carousel.min.css" />
-<link  rel="stylesheet" type="text/css"  media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/css/temp1.css" />
-<link  rel="stylesheet" type="text/css"  media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/css/swiper.min.css" />
-<link  rel="stylesheet" type="text/css"  media="screen and (min-width: 768px)" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/css/styles-l.css" />
-<link  rel="stylesheet" type="text/css"  media="print" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/css/print.css" />
+<link  rel="stylesheet" type="text/css"  media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/calender.css" />
+<link  rel="stylesheet" type="text/css"  media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/mpBlogIcon.css" />
+<link  rel="stylesheet" type="text/css"  media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/styles-m.css" />
+<link  rel="stylesheet" type="text/css"  media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/orbitvu-sh-public.css" />
+<link  rel="stylesheet" type="text/css"  media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/owl.carousel.min.css" />
+<link  rel="stylesheet" type="text/css"  media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/temp1.css" />
+<link  rel="stylesheet" type="text/css"  media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/swiper.min.css" />
+<link  rel="stylesheet" type="text/css"  media="screen and (min-width: 768px)" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/styles-l.css" />
+<link  rel="stylesheet" type="text/css"  media="print" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/print.css" />
 <script  type="text/javascript"  src="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/js/require.js"></script>
 <script  type="text/javascript"  src="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/js/mixins.js"></script>
 <script  type="text/javascript"  src="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/js/requirejs-config.js"></script>
