--- a/index.html
+++ b/index.html
@@ -1,45 +1,41 @@
 
 <!doctype html>
 <html lang="he">
-    <head >
-        <script>
-    var BASE_URL = 'https\u003A\u002F\u002Fmilatin\u002Dgroup.co.il\u002F';
-    var require = {
-        'baseUrl': 'https\u003A\u002F\u002Fmilatin\u002Dgroup.co.il\u002Fstatic\u002Fversion1677434242\u002Ffrontend\u002FWorx\u002FLumaRtl\u002Fhe_IL'
-    };</script>        <meta charset="utf-8"/>
-<meta name="title" content="שירן שושנה | טיפים להורות"/>
-<meta name="robots" content="INDEX,FOLLOW"/>
-<meta name="viewport" content="width=device-width, initial-scale=1"/>
-<meta name="format-detection" content="telephone=no"/>
-<meta name="google-site-verification" content="mIYQdChQSvYFT073C8Kk0hZIifpGczJ2v-ofE6QAMV0"/>
-<title>שירן שושנה | טיפים להורות</title>
-<link  rel="stylesheet" type="text/css"  media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/calender.css" />
-<link  rel="stylesheet" type="text/css"  media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/mpBlogIcon.css" />
-<link  rel="stylesheet" type="text/css"  media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/styles-m.css" />
-<link  rel="stylesheet" type="text/css"  media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/orbitvu-sh-public.css" />
-<link  rel="stylesheet" type="text/css"  media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/owl.carousel.min.css" />
-<link  rel="stylesheet" type="text/css"  media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/temp1.css" />
-<link  rel="stylesheet" type="text/css"  media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/swiper.min.css" />
-<link  rel="stylesheet" type="text/css"  media="screen and (min-width: 768px)" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/styles-l.css" />
-<link  rel="stylesheet" type="text/css"  media="print" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/print.css" />
-<script  type="text/javascript"  src="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/js/require.js"></script>
-<script  type="text/javascript"  src="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/js/mixins.js"></script>
-<script  type="text/javascript"  src="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/js/requirejs-config.js"></script>
-<script  type="text/javascript"  src="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/js/owl.carousel.min.js"></script>
-<script  type="text/javascript"  src="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/js/main-index.js"></script>
-<script  type="text/javascript"  src="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/js/main-index2.js"></script>
-<script  type="text/javascript"  async="async" src="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/Worx_Banner/js/common.js"></script>
-<link rel="preload" as="font" crossorigin="anonymous" href="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/fonts/opensans/light/opensans-300.woff2" />
-<link rel="preload" as="font" crossorigin="anonymous" href="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/fonts/opensans/regular/opensans-400.woff2" />
-<link rel="preload" as="font" crossorigin="anonymous" href="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/fonts/opensans/semibold/opensans-600.woff2" />
-<link rel="preload" as="font" crossorigin="anonymous" href="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/fonts/opensans/bold/opensans-700.woff2" />
-<link rel="preload" as="font" crossorigin="anonymous" href="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/fonts/Luma-Icons.woff2" />
-<link  rel="icon" type="image/x-icon" href="https://milatin-group.co.il/media/favicon/stores/1/facicon-5.png" />
-<link  rel="shortcut icon" type="image/x-icon" href="https://milatin-group.co.il/media/favicon/stores/1/facicon-5.png" />
-<!-- Google Tag Manager -->
+<head>
+    
+    <meta charset="utf-8" />
+    <meta name="title" content="שירן שושנה | טיפים להורות" />
+    <meta name="robots" content="INDEX,FOLLOW" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv=“X-UA-Compatible” content=“ie =edge”>
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="google-site-verification" content="mIYQdChQSvYFT073C8Kk0hZIifpGczJ2v-ofE6QAMV0" />
+    <title>שירן שושנה | טיפים להורות</title>
+    <link rel="stylesheet" type="text/css" media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/calender.css" />
+    <link rel="stylesheet" type="text/css" media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/mpBlogIcon.css" />
+    <link rel="stylesheet" type="text/css" media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/styles-m.css" />
+    <link rel="stylesheet" type="text/css" media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/orbitvu-sh-public.css" />
+    <link rel="stylesheet" type="text/css" media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/owl.carousel.min.css" />
+    <link rel="stylesheet" type="text/css" media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/temp1.css" />
+    <link rel="stylesheet" type="text/css" media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/swiper.min.css" />
+    <link rel="stylesheet" type="text/css" media="screen and (min-width: 768px)" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/styles-l.css" />
+    <link rel="stylesheet" type="text/css" media="print" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/print.css" />
+    <script type="text/javascript" src="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/js/require.js"></script>
+    <script type="text/javascript" src="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/js/mixins.js"></script>
+    <script type="text/javascript" src="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/js/requirejs-config.js"></script>
+    <script type="text/javascript" src="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/js/owl.carousel.min.js"></script>
+    <script type="text/javascript" src="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/js/main-index.js"></script>
+    <script type="text/javascript" src="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/js/main-index2.js"></script>
+    <script type="text/javascript" async="async" src="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/Worx_Banner/js/common.js"></script>
+    <link rel="preload" as="font" crossorigin="anonymous" href="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/fonts/opensans/light/opensans-300.woff2" />
+    <link rel="preload" as="font" crossorigin="anonymous" href="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/fonts/opensans/regular/opensans-400.woff2" />
+    <link rel="preload" as="font" crossorigin="anonymous" href="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/fonts/opensans/semibold/opensans-600.woff2" />
+    <link rel="preload" as="font" crossorigin="anonymous" href="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/fonts/opensans/bold/opensans-700.woff2" />
+    <link rel="preload" as="font" crossorigin="anonymous" href="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/fonts/Luma-Icons.woff2" />
+    <link rel="icon" type="image/x-icon" href="https://milatin-group.co.il/media/favicon/stores/1/facicon-5.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="https://milatin-group.co.il/media/favicon/stores/1/facicon-5.png" />
 
-
-    </head>
+</head>
     <body data-container="body"
           data-mage-init='{"loaderAjax": {}, "loader": { "icon": "https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/images/loader-2.gif"}}'
         id="html-body" class="cms-home cms-index-index page-layout-1column">
