--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <meta name="format-detection" content="telephone=no" />
     <meta name="google-site-verification" content="mIYQdChQSvYFT073C8Kk0hZIifpGczJ2v-ofE6QAMV0" />
     <title>שירן שושנה | טיפים להורות</title>
-    <link rel="stylesheet" type="text/css" media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/calender.css" />
-    <link rel="stylesheet" type="text/css" media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/mpBlogIcon.css" />
-    <link rel="stylesheet" type="text/css" media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/styles-m.css" />
-    <link rel="stylesheet" type="text/css" media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/orbitvu-sh-public.css" />
-    <link rel="stylesheet" type="text/css" media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/owl.carousel.min.css" />
-    <link rel="stylesheet" type="text/css" media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/temp1.css" />
-    <link rel="stylesheet" type="text/css" media="all" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/swiper.min.css" />
-    <link rel="stylesheet" type="text/css" media="screen and (min-width: 768px)" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/styles-l.css" />
-    <link rel="stylesheet" type="text/css" media="print" href="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/print.css" />
+    <link rel="stylesheet" type="text/css" media="all" href="calender.css" />
+    <link rel="stylesheet" type="text/css" media="all" href="mpBlogIcon.css" />
+    <link rel="stylesheet" type="text/css" media="all" href="styles-m.css" />
+    <link rel="stylesheet" type="text/css" media="all" href="orbitvu-sh-public.css" />
+    <link rel="stylesheet" type="text/css" media="all" href="owl.carousel.min.css" />
+    <link rel="stylesheet" type="text/css" media="all" href="temp1.css" />
+    <link rel="stylesheet" type="text/css" media="all" href="swiper.min.css" />
+    <link rel="stylesheet" type="text/css" media="screen and (min-width: 768px)" href="styles-l.css" />
+    <link rel="stylesheet" type="text/css" media="print" href="print.css" />
     <script type="text/javascript" src="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/js/require.js"></script>
     <script type="text/javascript" src="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/js/mixins.js"></script>
     <script type="text/javascript" src="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/js/requirejs-config.js"></script>
