--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     <link rel="stylesheet" type="text/css" media="all" href="swiper.min.css" />
     <link rel="stylesheet" type="text/css" media="screen and (min-width: 768px)" href="styles-l.css" />
     <link rel="stylesheet" type="text/css" media="print" href="print.css" />
-    <script type="text/javascript" src="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/js/require.js"></script>
-    <script type="text/javascript" src="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/js/mixins.js"></script>
-    <script type="text/javascript" src="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/js/requirejs-config.js"></script>
-    <script type="text/javascript" src="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/js/owl.carousel.min.js"></script>
-    <script type="text/javascript" src="https://raw.githubusercontent.com/shiran-shoshana/shiran-shoshana.github.io/main/js/main-index.js"></script>
-    <script type="text/javascript" src="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/js/main-index2.js"></script>
+    <script type="text/javascript" src="js/require.js"></script>
+    <script type="text/javascript" src="js/mixins.js"></script>
+    <script type="text/javascript" src="js/requirejs-config.js"></script>
+    <script type="text/javascript" src="js/owl.carousel.min.js"></script>
+    <script type="text/javascript" src="js/main-index.js"></script>
+    <script type="text/javascript" src="js/main-index2.js"></script>
     <script type="text/javascript" async="async" src="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/Worx_Banner/js/common.js"></script>
     <link rel="preload" as="font" crossorigin="anonymous" href="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/fonts/opensans/light/opensans-300.woff2" />
     <link rel="preload" as="font" crossorigin="anonymous" href="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/fonts/opensans/regular/opensans-400.woff2" />
