--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
     <script type="text/javascript" src="js/owl.carousel.min.js"></script>
     <script type="text/javascript" src="js/main-index.js"></script>
     <script type="text/javascript" src="js/main-index2.js"></script>
-    <script type="text/javascript" async="async" src="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/Worx_Banner/js/common.js"></script>
-    <link rel="preload" as="font" crossorigin="anonymous" href="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/fonts/opensans/light/opensans-300.woff2" />
-    <link rel="preload" as="font" crossorigin="anonymous" href="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/fonts/opensans/regular/opensans-400.woff2" />
-    <link rel="preload" as="font" crossorigin="anonymous" href="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/fonts/opensans/semibold/opensans-600.woff2" />
-    <link rel="preload" as="font" crossorigin="anonymous" href="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/fonts/opensans/bold/opensans-700.woff2" />
-    <link rel="preload" as="font" crossorigin="anonymous" href="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/fonts/Luma-Icons.woff2" />
+    <script type="text/javascript" async="async" src="common.js"></script>
+    <link rel="preload" as="font" crossorigin="anonymous" href="fonts/opensans-300.woff2" />
+    <link rel="preload" as="font" crossorigin="anonymous" href="fonts/opensans-400.woff2" />
+    <link rel="preload" as="font" crossorigin="anonymous" href="fonts/opensans-600.woff2" />
+    <link rel="preload" as="font" crossorigin="anonymous" href="fonts/opensans-700.woff2" />
+    <link rel="preload" as="font" crossorigin="anonymous" href="fonts/Luma-Icons.woff2" />
     <link rel="icon" type="image/x-icon" href="https://milatin-group.co.il/media/favicon/stores/1/facicon-5.png" />
     <link rel="shortcut icon" type="image/x-icon" href="https://milatin-group.co.il/media/favicon/stores/1/facicon-5.png" />
 
