--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html><html lang="he"><head>
-        <script async src="https://www.googletagmanager.com/gtm.js?id=GTM-MJXXCXF"></script><script>
-    var BASE_URL = 'https\u003A\u002F\u002Fmilatin\u002Dgroup.co.il\u002F';
-    var require = {
-        'baseUrl': 'https\u003A\u002F\u002Fmilatin\u002Dgroup.co.il\u002Fstatic\u002Fversion1677434242\u002Ffrontend\u002FWorx\u002FLumaRtl\u002Fhe_IL'
-    };</script>        <meta charset="utf-8">
+
+
+<meta charset="utf-8">
 <meta name="title" content="קבוצת מילטין I עמוד הבית">
 <meta name="robots" content="INDEX,FOLLOW">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="format-detection" content="telephone=no">
+
+
 <meta name="google-site-verification" content="mIYQdChQSvYFT073C8Kk0hZIifpGczJ2v-ofE6QAMV0">
+
+
 <title>קבוצת מילטין I עמוד הבית</title>
 <link rel="stylesheet" type="text/css" media="all" href="css/calendar.css">
 <link rel="stylesheet" type="text/css" media="all" href="css/mpBlogIcon.css">
@@ -19,6 +21,7 @@
 <link rel="stylesheet" type="text/css" media="all" href="css/swiper.min.css">
 <link rel="stylesheet" type="text/css" media="screen and (min-width: 768px)" href="css/styles-l.css">
 <link rel="stylesheet" type="text/css" media="print" href="css/print.css">
+
 <script type="text/javascript" src="js/require.js"></script>
 <script type="text/javascript" src="js/mixins.js"></script>
 <script type="text/javascript" src="js/requirejs-config.js"></script>
@@ -33,25 +36,7 @@
 <link rel="preload" as="font" crossorigin="anonymous" href="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/fonts/Luma-Icons.woff2">
 <link rel="icon" type="image/x-icon" href="images/facicon-5.png">
 <link rel="shortcut icon" type="image/x-icon" href="images/facicon-5.png">
-<!-- Google Tag Manager -->
 
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-
-})(window,document,'script','dataLayer','GTM-MJXXCXF');</script>
-
-<!-- End Google Tag Manager -->            <script type="text/x-magento-init">
-        {
-            "*": {
-                "Magento_PageCache/js/form-key-provider": {}
-            }
-        }
-    </script>
     </head>
     <body data-container="body" data-mage-init="{" loaderAjax": {}, "loader": { "icon": "https: milatin-group.co.il static version1677434242 frontend Worx LumaRtl he_IL images loader-2.gif"}}" id="html-body" class="cms-home cms-index-index page-layout-1column">
         
