--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     var require = {
         'baseUrl': 'https\u003A\u002F\u002Fmilatin\u002Dgroup.co.il\u002Fstatic\u002Fversion1677434242\u002Ffrontend\u002FWorx\u002FLumaRtl\u002Fhe_IL'
     };</script>        <meta charset="utf-8">
-<meta name="title" content="קבוצת מילטין I עמוד הבית">
+<meta name="title" content="שירן שושנה | ייעוץ והכוונה">
 <meta name="robots" content="INDEX,FOLLOW">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="format-detection" content="telephone=no">
 <meta name="google-site-verification" content="mIYQdChQSvYFT073C8Kk0hZIifpGczJ2v-ofE6QAMV0">
-<title>קבוצת מילטין I עמוד הבית</title>
+<title>שירן שושנה | ייעוץ והכוונה</title>
 <link rel="stylesheet" type="text/css" media="all" href="css/calendar.css">
 <link rel="stylesheet" type="text/css" media="all" href="css/mpBlogIcon.css">
 <link rel="stylesheet" type="text/css" media="all" href="css/styles-m.css">
