--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <a href="https://milatin-group.co.il/customer/account/login/referer/aHR0cHM6Ly9taWxhdGluLWdyb3VwLmNvLmlsLw%2C%2C/">כניסה</a>
 </li>
 <li><a href="https://milatin-group.co.il/customer/account/create/" id="idmuPLDZC1">יצירת חשבון</a></li></ul></div></div><div class="header content"><span data-action="toggle-nav" class="action nav-toggle"><span>Toggle Nav</span></span>
-<a class="logo" href="https://milatin-group.co.il/" title aria-label="store logo">
-    <img src="images/Logo_-Logo.png" title alt width="170">
+<a class="logo" href="https://shiran-shoshana.github.io/" title aria-label="store logo">
+    <img src="images/shiran.png" title alt width="170">
 </a>
 <!-- app/design/frontend/Worx/LumaRtl/Magento_Theme/templates/html/sections.phtml -->
     <div class="sections nav-sections">
